--- a/BrideyApp/BrideyApp/Views/Account/Login.cshtml
+++ b/BrideyApp/BrideyApp/Views/Account/Login.cshtml
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Marcellus&display=swap" rel="stylesheet">
 }
 <main>
-    <section id="wrapper-login" style="background-image: url('/assets/images/@layout.GetSectionBackgroundImages()["BasicSmallBackgroundImage"]');">
+    <section id="wrapper-login" style="background-image: url('/assets/images/@layout.GetSectionBackgroundImages()["BasicSmallBackgroundImage"]')">
         <div class="container page_text">
             <h1>
                 Log in to your account
