--- a/BrideyApp/BrideyApp/Views/Account/Register.cshtml
+++ b/BrideyApp/BrideyApp/Views/Account/Register.cshtml
@@ -9,7 +9,7 @@
     string[] res = (string[])TempData["errors"];
 }
 <main>
-    <section id="wrapper-register" style="background-image: url('/assets/images/@layout.GetSectionBackgroundImages()["BasicSmallBackgroundImage"]');">
+    <section id="wrapper-register" style="background-image: url('/assets/images/@layout.GetSectionBackgroundImages()["BasicSmallBackgroundImage"]'">
         <div class="container page_text">
             <h1>
                 Register
