--- a/BrideyApp/BrideyApp/Views/Account/ResetPassword.cshtml
+++ b/BrideyApp/BrideyApp/Views/Account/ResetPassword.cshtml
@@ -6,7 +6,7 @@
 }
 <!-- Main Start -->
 <main>
-    <section id="wrapper-forgotPassword" style="background-image: url('/assets/images/@layout.GetSectionBackgroundImages()["BasicSmallBackgroundImage"]');">
+    <section id="wrapper-forgotPassword" style="background-image: url('/assets/images/@layout.GetSectionBackgroundImages()["BasicSmallBackgroundImage"]')">
         <div class="container page_text">
             <h1>My Account</h1>
             <ul>
