--- a/BrideyApp/BrideyApp/Views/Blog/Index.cshtml
+++ b/BrideyApp/BrideyApp/Views/Blog/Index.cshtml
@@ -5,7 +5,7 @@
 
 <!-- Start Main -->
 <main>
-    <section id="wrapper-blog" style="background-image: url('/assets/images/@Model.SectionBackgroundImages["BasicSmallBackgroundImage"]');">
+    <section id="wrapper-blog" style="background-image: url('/assets/images/@Model.SectionBackgroundImages["BasicSmallBackgroundImage"]')">
         <div class="container page_text">
             <h1>Blog</h1>
             <ul>
