--- a/BrideyApp/BrideyApp/Views/Contact/Index.cshtml
+++ b/BrideyApp/BrideyApp/Views/Contact/Index.cshtml
@@ -8,7 +8,7 @@
 <!-- Start Main -->
 <main>
     <section id="wrapper-contact" class="contact-background"
-             style="background-image: url('/assets/images/@Model.SectionBackgroundImages["BasicSmallBackgroundImage"]');">
+             style="background-image: url('/assets/images/@Model.SectionBackgroundImages["BasicSmallBackgroundImage"]')">
         <div class="container page_text">
             <h1>Contact us</h1>
             <ul>
