--- a/BrideyApp/BrideyApp/Views/Shared/Components/Header/Default.cshtml
+++ b/BrideyApp/BrideyApp/Views/Shared/Components/Header/Default.cshtml
@@ -31,9 +31,9 @@
                         <div><i class="fa-regular fa-user icon user-icon"></i></div>
                         <span class="count-wishlist">0</span>
                         <div><a asp-controller="Wishlist" asp-action="Index"><i class="fa-regular fa-heart icon"></i></a></div>
-                        <span class="count-basket">0</span>
+                        <span class="count-basket">@Model.BasketCount</span>
                         <div class="basket">
-                            <a asp-controller="Basket" asp-action="Index"><i class="fa-solid fa-basket-shopping"></i></a>
+                            <a asp-controller="Cart" asp-action="Index"><i class="fa-solid fa-basket-shopping"></i></a>
                         </div>
                     </div>
                     <div class="login-register d-none">
@@ -117,16 +117,35 @@
                         </div>
                         <span class="count-basket">0</span>
                         <div class="basket responsive-icon">
-                            <a asp-controller="Basket" asp-action="Index">
+                            <a asp-controller="Cart" asp-action="Index">
                                 <i class="fa-solid fa-basket-shopping"></i>
                             </a>
                         </div>
                     </div>
                     <div class="login-register-responsive d-none">
                         <ul>
-                            <li><a asp-controller="Login" asp-action="Index">Login</a></li>
-                            <li> <span>/</span></li>
-                            <li><a asp-controller="Register" asp-action="Index">Register</a></li>
+                            @if (User.Identity.IsAuthenticated)
+                            {
+                                <ul class="bx-log-out">
+                                    <li class="nav-item">
+                                        <form asp-controller="Account" asp-action="Logout" asp-route-userId="@userManager.Users.Where(m=>m.UserName==User.Identity.Name).FirstOrDefault().Id" method="post">
+                                            <button style="border:none; color: black" type="submit" class="nav-link">Logout</button>
+                                        </form>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="my-account.html">@User.Identity.Name</a>
+                                    </li>
+                                </ul>
+                            }
+                            else
+                            {
+                                <ul class="bx-log-register">
+
+                                    <li><a asp-controller="Account" asp-action="Login">Login</a></li>
+                                    <li><span>/</span></li>
+                                    <li><a asp-controller="Account" asp-action="Register">Register</a></li>
+                                </ul>
+                            }
 
                         </ul>
                     </div>
@@ -167,7 +186,7 @@
                     <div><a asp-controller="Wishlist" asp-action="Index"><i class="fa-regular fa-heart icon"></i></a></div>
                     <span class="count-basket">@Model.BasketCount</span>
                     <div class="basket">
-                        <a asp-controller="Basket" asp-action="Index"><i class="fa-solid fa-basket-shopping"></i></a>
+                        <a asp-controller="Cart" asp-action="Index"><i class="fa-solid fa-basket-shopping"></i></a>
                     </div>
                 </div>
             </div>
