--- a/BrideyApp/BrideyApp/Views/Shared/Components/Header/Default.cshtml
+++ b/BrideyApp/BrideyApp/Views/Shared/Components/Header/Default.cshtml
@@ -73,8 +73,8 @@
                                             aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
-                                    <form>
-                                        <input type="text">
+                                    <form class="searchbox-area">
+                                        <input class="input-search" type="text" placeholder="Search...">
                                     </form>
                                 </div>
                             </div>
@@ -155,8 +155,8 @@
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <form>
-                                        <input type="text" placeholder="Search...">
+                                    <form class="searchbox-area">
+                                        <input class="input-search" type="text" placeholder="Search...">
                                     </form>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal"
                                             aria-label="Close"></button>
