--- a/BrideyApp/BrideyApp/Views/Account/Login.cshtml
+++ b/BrideyApp/BrideyApp/Views/Account/Login.cshtml
@@ -28,7 +28,7 @@
             <div class="form-login-wrap">
                 <h2 class="login-form-title">Login</h2>
                 <label for="username">Username or email address<span class="required">*</span></label>
-                <input type="text" class="input-text" type="email" asp-for="EmailOrUsername">
+                <input type="text" class="input-text" type="text" asp-for="EmailOrUsername">
                 <span class="text-danger" asp-validation-for="EmailOrUsername"></span>
                 <label for="password">Password<span class="required">*</span></label>
                 <div class="area-password">
