--- a/BrideyApp/BrideyApp/Views/Shared/_ProductsPartial.cshtml
+++ b/BrideyApp/BrideyApp/Views/Shared/_ProductsPartial.cshtml
@@ -45,7 +45,7 @@
                     }
                     else
                     {
-                        <li><a asp-controller="Account" asp-action="Login"><i class="fa-solid fa-basket-shopping"></i></a></li>
+                        <li><a asp-controller="Account" asp-action="Login"><i class="fa-regular fa-heart"></i></a></li>
                     }
                     @if (User.Identity.IsAuthenticated)
                     {
