--- a/BrideyApp/BrideyApp/Views/Cart/Index.cshtml
+++ b/BrideyApp/BrideyApp/Views/Cart/Index.cshtml
@@ -59,6 +59,14 @@
                             </tbody>
 
                         </table>
+                        <div class="footer-wish">
+                            <button class="btn btn-primary shop btn-basket"><a asp-controller="Shop" asp-action="Index">Continue shopping</a></button>
+                            @foreach (var item in Model)
+                            {
+                                grandTotal += item.Total;
+                            }
+                            <span class="total-price">Grand total: $<span class="grand-total">@grandTotal.ToString("0.00")</span></span>
+                        </div>
                     }
                     else
                     {
@@ -70,14 +78,7 @@
                         Basket Empty.Please Add product in your basket..
                     </div>
                 </div>
-                <div class="footer-wish">
-                    <button class="btn btn-primary shop"><a asp-controller="Shop" asp-action="Index">Continue shopping</a></button>
-                    @foreach (var item in Model)
-                    {
-                        grandTotal += item.Total;
-                    }
-                    <span class="total-price">Grand total: $<span class="grand-total">@grandTotal.ToString("0.00")</span></span>
-                </div>
+
             </div>
         </div>
     </section>
