--- a/BrideyApp/BrideyApp/Views/Shared/Components/Header/Default.cshtml
+++ b/BrideyApp/BrideyApp/Views/Shared/Components/Header/Default.cshtml
@@ -29,7 +29,7 @@
                                data-bs-target="#exampleModal"></i>
                         </div>
                         <div><i class="fa-regular fa-user icon user-icon"></i></div>
-                        <span class="count-wishlist">0</span>
+                        <span class="count-wishlist">@Model.WishlistCount</span>
                         <div><a asp-controller="Wishlist" asp-action="Index"><i class="fa-regular fa-heart icon"></i></a></div>
                         <span class="count-basket">@Model.BasketCount</span>
                         <div class="basket">
@@ -109,13 +109,13 @@
                         <div class="responsive-icon">
                             <i class="fa-regular fa-user icon user-icon-responsive"></i>
                         </div>
-                        <span class="count-wishlist">0</span>
+                        <span class="count-wishlist">@Model.WishlistCount</span>
                         <div clas="responsive-icon">
                             <a asp-controller="Wishlist" asp-action="Index">
                                 <i class="fa-regular fa-heart heart-icon"></i>
                             </a>
                         </div>
-                        <span class="count-basket">0</span>
+                        <span class="count-basket">@Model.BasketCount</</span>
                         <div class="basket responsive-icon">
                             <a asp-controller="Cart" asp-action="Index">
                                 <i class="fa-solid fa-basket-shopping"></i>
