--- a/BrideyApp/BrideyApp/Views/Shared/Components/Header/Default.cshtml
+++ b/BrideyApp/BrideyApp/Views/Shared/Components/Header/Default.cshtml
@@ -182,7 +182,7 @@
                 </ul>
                 <div class="right-area d-none">
                     <div class="search"><i class="fa-solid fa-magnifying-glass icon"></i></div>
-                    <span class="count-wishlist">0</span>
+                    <span class="count-wishlist">@Model.WishlistCount</span>
                     <div><a asp-controller="Wishlist" asp-action="Index"><i class="fa-regular fa-heart icon"></i></a></div>
                     <span class="count-basket">@Model.BasketCount</span>
                     <div class="basket">
