--- a/BrideyApp/BrideyApp/Areas/Admin/Views/Product/Index.cshtml
+++ b/BrideyApp/BrideyApp/Areas/Admin/Views/Product/Index.cshtml
@@ -9,6 +9,7 @@
         <table class="table">
             <thead>
                 <tr>
+                    <th style="text-align: center;">#</th>
                     <th style="text-align: center;">Image</th>
                     <th style="text-align: center;">Name</th>
                     <th style="text-align: center;">SKU</th>
@@ -21,6 +22,9 @@
                 @foreach (var product in Model.Datas)
                 {
                     <tr data-id="@product.Id">
+                        <td class="py-1">
+                            @changeCount
+                        </td>
                         <td class="py-1" style="text-align: center;width: 200px;height:200px">
                             <img src="~/assets/images/@product.Images.Where(m=>m.IsMain).FirstOrDefault().Image" style="width: 100%;height:100%" alt="image" />
                         </td>
@@ -42,6 +46,7 @@
                         </td>
 
                     </tr>
+                    changeCount++;
                 }
             </tbody>
         </table>
