--- a/BrideyApp/BrideyApp/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BrideyApp/BrideyApp/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -255,6 +255,16 @@
                                     <div data-i18n="Error">Product</div>
                                 </a>
                             </li>
+                            <li class="menu-item">
+                                <a asp-area="Admin" asp-controller="BlogComment" asp-action="Index" class="menu-link">
+                                    <div data-i18n="Error">BlogComment</div>
+                                </a>
+                            </li>
+                            <li class="menu-item">
+                                <a asp-area="Admin" asp-controller="ProductComment" asp-action="Index" class="menu-link">
+                                    <div data-i18n="Error">ProductComment</div>
+                                </a>
+                            </li>
                         </ul>
                     </li>
                 </ul>
