--- a/BrideyApp/BrideyApp/Areas/Admin/Views/BlogComment/Detail.cshtml
+++ b/BrideyApp/BrideyApp/Areas/Admin/Views/BlogComment/Detail.cshtml
@@ -1,4 +1,4 @@
-﻿@model Blog
+﻿@model BlogComment
 @{
     ViewData["Title"] = "Detail";
 }
@@ -8,32 +8,32 @@
         <thead>
             <tr>
                 <th style="text-align: center;">
-                    Image
+                    Blog Name
                 </th>
                 <th style="text-align: center;">
-                    Title
+                    User Name
                 </th>
                 <th style="text-align: center;">
-                    Author
+                    Email
                 </th>
                 <th style="text-align: center;">
-                    Description
+                    Message
                 </th>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <td class="py-1" style="text-align: center;">
-                    <img src="~/assets/images/@Model.Image" style="width:250px;height:200px" />
+                  @Model.Blog.Title
                 </td>
                 <td class="py-1" style="text-align: center;">
-                    @Model.Title
+                    @Model.Name
                 </td>
                 <td class="py-1" style="text-align: center;">
-                    @Model.Author.Name
+                    @Model.Email
                 </td>
                 <td class="py-1" style="text-align: center;width: 38%;">
-                    @Model.Description
+                    @Model.Message
                 </td>
             </tr>
         </tbody>
