--- a/BrideyApp/BrideyApp/Views/Account/ResetPassword.cshtml
+++ b/BrideyApp/BrideyApp/Views/Account/ResetPassword.cshtml
@@ -28,7 +28,7 @@
                     new password via email.
                 </p>
                 <form class="lost_reset_password" method="post" asp-controller="Account" asp-action="ForgotPassword">
-                    <label for="user_login">Username or email</label>
+                    <label for="user_login">Email</label>
                     <input class="input-text" type="email" asp-for="Email">
                     <span class="text-danger" asp-validation-for="Email"></span>
                     <button type="submit">Reset password</button>
