--- a/BrideyApp/BrideyApp/Views/Shared/Components/Header/Default.cshtml
+++ b/BrideyApp/BrideyApp/Views/Shared/Components/Header/Default.cshtml
@@ -30,10 +30,10 @@
                         </div>
                         <div><i class="fa-regular fa-user icon user-icon"></i></div>
                         <span class="count-wishlist">@Model.WishlistCount</span>
-                        <div><a asp-controller="Wishlist" asp-action="Index"><i class="fa-regular fa-heart icon"></i></a></div>
+                        <div><a asp-controller="Wishlist" asp-action="Index"><i class="fa-regular fa-heart icon" style="cursor:pointer"></i></a></div>
                         <span class="count-basket">@Model.BasketCount</span>
                         <div class="basket">
-                            <a asp-controller="Cart" asp-action="Index"><i class="fa-solid fa-basket-shopping"></i></a>
+                            <a asp-controller="Cart" asp-action="Index"><i class="fa-solid fa-basket-shopping" style="cursor:pointer"></i></a>
                         </div>
                     </div>
                     <div class="login-register d-none">
