--- a/BrideyApp/BrideyApp/Views/Shop/Index.cshtml
+++ b/BrideyApp/BrideyApp/Views/Shop/Index.cshtml
@@ -93,7 +93,7 @@
                                 }
                             </ul>
                         </div>
-                        <form id="filterForm" asp-controller="shop" asp-action="GetRangeProducts" method="get">
+                        <form id="filterForm" asp-controller="shop" asp-action="Index" method="get">
                             <div class="product-area">
                                 <div class="price-title">
                                     <h3>FILTER BY PRICE</h3>
