--- a/BrideyApp/BrideyApp/Areas/Admin/Views/_ViewImports.cshtml
+++ b/BrideyApp/BrideyApp/Areas/Admin/Views/_ViewImports.cshtml
@@ -20,7 +20,7 @@
 @using BrideyApp.Areas.Admin.ViewModels.Social
 @using BrideyApp.Areas.Admin.ViewModels.Team
 @using BrideyApp.Areas.Admin.ViewModels.User
-@using BrideyApp.Areas.Admin.ViewModels.Acoount
+@using BrideyApp.Areas.Admin.ViewModels.Account
 
 @using BrideyApp.Helpers
 @using BrideyApp.Models
