--- a/BrideyApp/BrideyApp/Views/Account/Login.cshtml
+++ b/BrideyApp/BrideyApp/Views/Account/Login.cshtml
@@ -39,6 +39,7 @@
                 <div class="login-bottom">
                     <input type="checkbox" id="remember_me" asp-for="IsRememberMe"><span>Remember me</span>
                     <p><a asp-controller="Account" asp-action="ForgotPassword">Lost your password?</a></p>
+                    <div class="register-half-bg" style="position: absolute;right: 0px;top: 18px;"> <h4>Dont't have an account?</h4><a asp-controller="Account" asp-action="Register">Register</a></div>
                 </div>
 
             </div>
